NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/NATT_AlternativeItem__c.object-meta.xml
<CustomObject>
    <description>Custom object for storing alternative item entries (e.g. items that supersede other catalog items)</description>
    <label>NATT Alternative Item</label>
    <nameField>
        <displayFormat>NAI-{00000000}</displayFormat>
        <label>NATT Alternative Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NATT Alternative Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>