NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/fields/Alternative_P_N__c.field-meta.xml
<CustomField>
    <fullName>Alternative_P_N__c</fullName>
    <formula>NATT_AlternativeItem__r.NATT_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative P/N</label>
    <type>Text</type>
</CustomField>