NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/fields/NATT_AlternativeItem__c.field-meta.xml
<CustomField>
    <fullName>NATT_AlternativeItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Item that is being provided as an alternative to the Product Item</description>
    <inlineHelpText>Item that is being provided as an alternative to the Product Item</inlineHelpText>
    <label>Alternative Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NATT Alternative Items (Alternative Item)</relationshipLabel>
    <relationshipName>NATT_Alternative_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>