NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/fields/NATT_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>NATT_EffectiveDate__c</fullName>
    <description>Date the alternative item effectively supersedes the product item</description>
    <inlineHelpText>Date the alternative item effectively supersedes the product item</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>