NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/fields/NATT_ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>NATT_ExpiryDate__c</fullName>
    <description>Date the alternative item expires</description>
    <inlineHelpText>Date the alternative item expires</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>