NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/fields/NATT_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Number__c</fullName>
    <formula>NATT_ProductItem__r.NATT_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>