NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/fields/NATT_ProductItem__c.field-meta.xml
<CustomField>
    <fullName>NATT_ProductItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Item that is being superseded by the item shown in the Alternative Item field</description>
    <inlineHelpText>Item that is being superseded by the item shown in the Alternative Item field</inlineHelpText>
    <label>Product Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NATT Alternative Items</relationshipLabel>
    <relationshipName>NATT_Alternative_Items</relationshipName>
    <type>Lookup</type>
</CustomField>