NATTQA-ENV/force-app/main/default/objects/NATT_AlternativeItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NATT_Part_Number__c</columns>
    <columns>NATT_ProductItem__c</columns>
    <columns>Alternative_P_N__c</columns>
    <columns>NATT_AlternativeItem__c</columns>
    <columns>NATT_EffectiveDate__c</columns>
    <columns>NATT_ExpiryDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>